# rash

./: .gitignore  .gitmodules  HLint.hs  LICENSE  README.md  a.sh  b.sh  dev.sh  rash.cabal  stack.yaml
app/: Main.hs
data/: hellobash.sh  letsencrypt.sh  nginx.rash  nginx.sh  pdf-check.rash  pdf-check.sh  sudokiller.sh
src/: Lib.hs  TranslateBash.hs
src/Rash/: AST.hs  AST2IR.hs  Bash2AST.hs  Builtins.hs  Debug.hs  IR.hs  Interpret.hs  Interpreter.hs  Options.hs  Parser.hs  Process.hs  Repl.hs  Runner.hs  Runtime.hs  RuntimeTypes.hs  Util.hs
src/Rash/IR/: AST.hs  Bash2Rough.hs  Rough.hs  Rough2AST.hs
src/Rash/Runtime/: Builtins.hs  Interpreter.hs  Process.hs  Runtime.hs  Types.hs
src/rash/: AST.hs  Bash2AST.hs  Builtins.hs  Interpret.hs  Interpreter.hs  Process.hs  Repl.hs  Runner.hs  Runtime.hs
test/: Spec.hs  Test.hs
test/Rash/test/: TestAST.hs
test/rash/test/: TestAST.hs
