name:                rash
version:             0.1.0.0
synopsis:            Rebourne Again Shell
description:         Please see README.md
homepage:            http://github.com/pbiggar/rash#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Biggar
maintainer:          paul.biggar@gmail.com
copyright:           2016 Paul Biggar
category:            Language
build-type:          Simple
extra-source-files:  README.md, stack.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded
  exposed-modules:
                       Rash.AST
                     , Rash.Bash2AST
                     , Rash.Builtins
                     , Rash.Debug
                     , Rash.Interpreter
                     , Rash.Options
                     , Rash.Process
                     , Rash.Repl
                     , Rash.Runner
                     , Rash.Runtime
                     , Rash.Util
  build-depends:       base
                     , text
                     , parsec
                     , language-bash
                     , groom
                     , uniplate
                     , transformers
                     , containers
                     , process >= 1.4.2.0
                     , async
                     , hflags
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell

executable rash-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , rash
                     , hflags
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell
  ghc-options:         -Wall -threaded


test-suite rash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Rash.Test.TestAST
  build-depends:       base
                     , rash
                     , hflags
                     , silently
                     , parsec
                     , tasty
                     , tasty-hunit
                     , tasty-expected-failure
                     , uniplate
                     , language-bash
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell
  ghc-options:         -Wall -threaded


source-repository head
  type:     git
  location: https://github.com/pbiggar/rash
